// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render correctly 1`] = `
.c0 {
  padding: 10px 20px;
  box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.25);
  border-radius: 0;
  margin-bottom: 20px;
  overflow-x: scroll;
}

<div
  className="c0"
>
  <h1>
    title
  </h1>
</div>
`;

exports[`Card should render correctly bordered 1`] = `
.c0 {
  padding: 10px 20px;
  box-shadow: 0px 0px 1px 0px rgba(0,0,0,0.25);
  border-radius: 3px;
  margin-bottom: 20px;
  overflow-x: scroll;
}

<div
  className="c0"
>
  <h1>
    title
  </h1>
</div>
`;
